# LVIMOT

./: CMakeLists.txt  README.md  package.xml
fgo-mot/config/: lio_config.yaml  patchwork_params.yaml  test.rviz
fgo-mot/include/: LShapeDetect.hpp
fgo-mot/include/factors/: objectFactor.h  pose_local_parameterization.h
fgo-mot/include/featureManager/: laserFrame.h
fgo-mot/include/utils/: utility.h
fgo-mot/launch/: run.launch
fgo-mot/msg/: boundingBox2DArray.msg  cloud_info.msg
fgo-mot/src/: featureExtraction.cpp
include/: CVC_cluster.hpp  HungarianAlg.hpp  LShapeFit.hpp  patchwork.hpp
include/factors/: marginalizationFactor.h
include/featureManager/: objectFrame.h
include/utils/: common.h  msg.h
launch/: run.launch  test.rviz
msg/: boundingBox2D.msg  detect_object.msg  index_vector.msg
src/: imageProjection.cpp  kittiHelper.cpp  lidarOdometry.cpp  objectTracker.cpp
